--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.10
+FROM python:3.9
 RUN mkdir api
 COPY ./requirements.txt /api/
-RUN pip install -r /api/requirements.txt
+RUN pip install --no-cache-dir -r /api/requirements.txt
 WORKDIR /api/scripts/
 CMD ["python", "app.py"]
