feat(api)!: servse the flask application with gunicorn

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,4 +3,4 @@ RUN mkdir api
 COPY ./requirements.txt /api/
 RUN pip install --no-cache-dir -r /api/requirements.txt
 WORKDIR /api/scripts/
-CMD ["python", "app.py"]
+CMD ["gunicorn",  "-b", "0.0.0.0:5000", "app:app", "--timeout", "3600"]
