--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,25 @@ services:
   api:
     build: ./api
     container_name: api
+    networks:
+      nginx-api:
+        aliases:
+          - flask-app
     ports:
       - "5000:5000"
     volumes:
       - "./api/:/api"
     tty: true
+  nginx:
+    build: ./nginx
+    container_name: nginx
+    depends_on:
+      - api
+    volumes:
+      - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+    networks:
+      - nginx-api
+    ports:
+      - "80:80"
+networks:
+  nginx-api:
