--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,11 @@
+upstream api {
+    server konochat_api_1:5000;
+    server konochat_api_2:5000;
+}
+
 server {
     listen 80;
-    server_name localhost;
-
     location / {
-        proxy_pass http://flask-app:5000/;
-        proxy_set_header Host "localhost";
-    
+        proxy_pass http://api;
     }
-
 }
