feat(api): scale containers without an argument

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - "./api/:/api"
     tty: true
+    scale: 2
   nginx:
     build: ./nginx
     container_name: nginx
