--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,33 @@
-version: '3'
-
 services:
+  frontend:
+    container_name: frontend
+    image: node:16
+    environment:
+      VUE_APP_BASE_URL: "http://localhost"
+    volumes:
+      - ./frontend:/projects
+    working_dir: /projects/kono-chat
+    command: sh -c "yarn install --frozen-lockfile && yarn run serve"
+    tty: true
+  backend:
+    image: python:3.9
+    volumes:
+      - ./backend/:/backend
+    deploy:
+      replicas: 1
+    working_dir: /backend/scripts/
+    command: sh -c "pip install --no-cache-dir -r /backend/requirements.txt && gunicorn -b 0.0.0.0:5000 app:app --timeout 3600"
+    tty: true
   web:
-    build: ./web
     container_name: web
-    ports:
-      - "8080:8080"
+    image: nginx:1.23.0
     volumes:
-      - "./web:/projects"
-    tty: true
-  api:
-    build: ./api
-    volumes:
-      - "./api/:/api"
-    tty: true
-    scale: 2
-  nginx:
-    build: ./nginx
-    container_name: nginx
+      - ./web/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - api
+      - frontend
+      - backend
     links:
-      - api
-    volumes:
-      - "./nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+      - frontend
+      - backend
     ports:
-      - "80:80"
+      - 80:80
